--- a/index.html
+++ b/index.html
@@ -1,62 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
-  <head>
-  <title>Index of /.Addons/</title>
-  </head>
-  <body>
-<h1>Index of /.Addons/</h1>
-<ul><li><a href="/">Parent Directory</a></li>
-<li><a href="plugin.video.1x2.zip">plugin.video.1x2.zip</a></li>
-<li><a href="plugin.video.Apolo-0.0.2.zip">plugin.video.Apolo-0.0.2.zip</a></li>
-<li><a href="plugin.video.Atlantis-0.0.4.zip">plugin.video.Atlantis-0.0.4.zip</a></li>
-<li><a href="plugin.video.Deportes247-0.0.4.zip">plugin.video.Deportes247-0.0.4.zip</a></li>
-<li><a href="plugin.video.Explora-1.3.0.zip">plugin.video.Explora-1.3.0.zip</a></li>
-<li><a href="plugin.video.INSOMNIA-0.0.2.zip">plugin.video.INSOMNIA-0.0.2.zip</a></li>
-<li><a href="plugin.video.IberiKa-0.0.6.zip">plugin.video.IberiKa-0.0.6.zip</a></li>
-<li><a href="plugin.video.LFP.zip">plugin.video.LFP.zip</a></li>
-<li><a href="plugin.video.Lilianime-0.0.5.zip">plugin.video.Lilianime-0.0.5.zip</a></li>
-<li><a href="plugin.video.LiveTube.zip">plugin.video.LiveTube.zip</a></li>
-<li><a href="plugin.video.Magyck-1.19.0.zip">plugin.video.Magyck-1.19.0.zip</a></li>
-<li><a href="plugin.video.Manuart-0.0.2.zip">plugin.video.Manuart-0.0.2.zip</a></li>
-<li><a href="plugin.video.Mundo.Dragon.Ball-0.2.zip">plugin.video.Mundo.Dragon.Ball-0.2.zip</a></li>
-<li><a href="plugin.video.Planeta-1.1.1.zip">plugin.video.Planeta-1.1.1.zip</a></li>
-<li><a href="plugin.video.Princess.zip">plugin.video.Princess.zip</a></li>
-<li><a href="plugin.video.S.J.JusTicIa-1.0.2.zip">plugin.video.S.J.JusTicIa-1.0.2.zip</a></li>
-<li><a href="plugin.video.SportsDevil-18.08.18.zip">plugin.video.SportsDevil-18.08.18.zip</a></li>
-<li><a href="plugin.video.SportsDevil-2018.04.29.zip">plugin.video.SportsDevil-2018.04.29.zip</a></li>
-<li><a href="plugin.video.Zona.tv-1.8.zip">plugin.video.Zona.tv-1.8.zip</a></li>
-<li><a href="plugin.video.aerobic-0.0.2.zip">plugin.video.aerobic-0.0.2.zip</a></li>
-<li><a href="plugin.video.ajedrez-1.0.zip">plugin.video.ajedrez-1.0.zip</a></li>
-<li><a href="plugin.video.alfa-2.8.7.zip">plugin.video.alfa-2.8.7.zip</a></li>
-<li><a href="plugin.video.arenavisionezy-5.3.9.zip">plugin.video.arenavisionezy-5.3.9.zip</a></li>
-<li><a href="plugin.video.avezy-1.4.1.zip">plugin.video.avezy-1.4.1.zip</a></li>
-<li><a href="plugin.video.cocina-1.2.zip">plugin.video.cocina-1.2.zip</a></li>
-<li><a href="plugin.video.cristalazul-0.0.4.zip">plugin.video.cristalazul-0.0.4.zip</a></li>
-<li><a href="plugin.video.deportesalacarta.zip">plugin.video.deportesalacarta.zip</a></li>
-<li><a href="plugin.video.escalofrios-6.6.6.zip">plugin.video.escalofrios-6.6.6.zip</a></li>
-<li><a href="plugin.video.festa-0.0.10.zip">plugin.video.festa-0.0.10.zip</a></li>
-<li><a href="plugin.video.festakids-0.0.4.zip">plugin.video.festakids-0.0.4.zip</a></li>
-<li><a href="plugin.video.foodandtravel.zip">plugin.video.foodandtravel.zip</a></li>
-<li><a href="plugin.video.insession.zip">plugin.video.insession.zip</a></li>
-<li><a href="plugin.video.live.magellan.zip">plugin.video.live.magellan.zip</a></li>
-<li><a href="plugin.video.magufo.zip">plugin.video.magufo.zip</a></li>
-<li><a href="plugin.video.mundocine-1.0.1.zip">plugin.video.mundocine-1.0.1.zip</a></li>
-<li><a href="plugin.video.mundrone-0.0.4.zip">plugin.video.mundrone-0.0.4.zip</a></li>
-<li><a href="plugin.video.musicando-0.0.6.zip">plugin.video.musicando-0.0.6.zip</a></li>
-<li><a href="plugin.video.noise-1.0.0.zip">plugin.video.noise-1.0.0.zip</a></li>
-<li><a href="plugin.video.now_music-5.5.9.zip">plugin.video.now_music-5.5.9.zip</a></li>
-<li><a href="plugin.video.palantir-0.0.57.zip">plugin.video.palantir-0.0.57.zip</a></li>
-<li><a href="plugin.video.playlistLoader.zip">plugin.video.playlistLoader.zip</a></li>
-<li><a href="plugin.video.plexus-streams.zip">plugin.video.plexus-streams.zip</a></li>
-<li><a href="plugin.video.sinbarreras-1.4.zip">plugin.video.sinbarreras-1.4.zip</a></li>
-<li><a href="plugin.video.sport365.live-2.1.1.zip">plugin.video.sport365.live-2.1.1.zip</a></li>
-<li><a href="plugin.video.tvalacarta-4.1.0.zip">plugin.video.tvalacarta-4.1.0.zip</a></li>
-<li><a href="plugin.video.youtube-master.zip">plugin.video.youtube-master.zip</a></li>
-<li><a href="tvalacarta-kodi-jarvis-4.1.0.zip">tvalacarta-kodi-jarvis-4.1.0.zip</a></li>
-<li><a href="tvalacarta-kodi-krypton-4.1.0.zip">tvalacarta-kodi-krypton-4.1.0.zip</a></li>
-<li><a href="tvalacarta-kodi-krypton-4.1.2.zip">tvalacarta-kodi-krypton-4.1.2.zip</a></li>
-<li><a href="tvalacarta-master.zip">tvalacarta-master.zip</a></li>
-<li><a href="weather.gismeteo-0.3.3.zip">weather.gismeteo-0.3.3.zip</a></li>
-</ul>
-</body>
-</html>
+ <head>
+ <h1>Fuente Kodileia/</h1>
+ </head>
+ <body>
+		<li><a href="alfa/">alfa</a><td></td></li>
+	<li><a href="addons/">addons</a><td></td></li>
+	<li><a href="ayuda/">ayuda</a><td></td></li>
+</ul><li><a href="torrents/">torrents</a><td></td></li>
+</body></html>
