--- a/addons/plugin.video.cristalazul/index.html
+++ b/addons/plugin.video.cristalazul/index.html
@@ -1,13 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
-  <head>
-  <title>Index of /Addons adultos/</title>
-  </head>
-  <body>
-<h1>Index of /Addons adultos/</h1>
-<ul><li><a href="/"> Parent Directory</a></li>
-<li><a href="plugin.video.18.zip">plugin.video.18.zip</a></li>
-<li><a href="plugin.video.69-2.0.69.zip">plugin.video.69-2.0.69.zip</a></li>  
-</ul>
-</body>
-</html>
+ <head>
+ <h1>Fuente kodileia/</h1>
+ </head>
+ <body>
+		<li><a href="1x2/">1x2</a><td></td></li>
+</ul><li><a href="torrents/">torrents</a><td></td></li>
+</body></html>
