--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  </head>
  <body>
 		<li><a href="alfa/">alfa</a><td></td></li>
-	<li><a href="addons/">addons</a><td></td></li>
+	<li><a href="anime/">anime</a><td></td></li>
 	<li><a href="ayuda/">ayuda</a><td></td></li>
 </ul><li><a href="torrents/">torrents</a><td></td></li>
 </body></html>
