--- a/anime/index.html
+++ b/anime/index.html
@@ -4,10 +4,9 @@
   <title>Index of /Addons adultos/</title>
   </head>
   <body>
-<h1>Index of /Addons adultos/</h1>
+<h1>Index of /anime/</h1>
 <ul><li><a href="/"> Parent Directory</a></li>
 <li><a href="plugin.video.Lilianime-0.0.5.zip">plugin.video.Lilianime-0.0.5.zip</a></li>
-<li><a href="plugin.video.69-2.0.69.zip">plugin.video.69-2.0.69.zip</a></li>  
 </ul>
 </body>
 </html>
