--- a/wizards/index.html
+++ b/wizards/index.html
@@ -6,8 +6,10 @@
   <body>
 <h1>Index of /Addons adultos/</h1>
 <ul><li><a href="/"> Parent Directory</a></li>
-<li><a href="plugin.video.18.zip">plugin.video.18.zip</a></li>
-<li><a href="plugin.video.69-2.0.69.zip">plugin.video.69-2.0.69.zip</a></li>  
+<li><a href="plugin.program.kodileiawizard-1.9.zip">plugin.program.kodileiawizard-1.9.zip</a></li>
+<li><a href="plugin.program.stva.zip">plugin.program.stva.zip</a></li>
+<li><a href="plugin.program.WIZAR-CHOPO-3.1.zip">plugin.program.WIZAR-CHOPO-3.1.zip</a></li>
+<li><a href="plugin.program.Netai-1.6.zip">plugin.program.Netai-1.6.zip</a></li>
 </ul>
 </body>
 </html>
