--- a/addons-infantiles/index.html
+++ b/addons-infantiles/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
   <head>
-  <title>Index of /Addons adultos/</title>
+  <title>Index of /addons-infantiles/</title>
   </head>
   <body>
-<h1>Index of /Addons adultos/</h1>
+<h1>Index of /addons-infantiles/</h1>
 <ul><li><a href="/"> Parent Directory</a></li>
-<li><a href="plugin.video.18.zip">plugin.video.18.zip</a></li>
-<li><a href="plugin.video.69-2.0.69.zip">plugin.video.69-2.0.69.zip</a></li>  
+<li><a href="plugin.video.festakids-0.0.4.zip">plugin.video.festakids-0.0.4.zip</a></li>
+<li><a href="plugin.video.Tvchopo.Kids-5.0.zip">plugin.video.Tvchopo.Kids-5.0.zip</a></li>  
 </ul>
 </body>
 </html>
