--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
  <h1>Fuente Kodileia/</h1>
  </head>
  <body>
-<li><a href="ayuda/">ayuda</a><td></td></li>	
-<li><a href="addons/">addons</a><td></td></li>
+<li><a href="wizard/">wizards</a><td></td></li>
 <li><a href="addons-infatiles/">addons-infantiles</a><td></td></li>
 <li><a href="anime/">anime</a><td></td></li>
 <li><a href="programas/">programas</a><td></td></li>	 
