--- a/wizards/index.html
+++ b/wizards/index.html
@@ -1,11 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
-  <head>
-  <title>Index of /Addons adultos/</title>
-  </head>
-  <body>
-<h1>Index of /Addons adultos/</h1>
-<ul><li><a href="/"> Parent Directory</a></li>
+ <head>
+ <h1>wizards/</h1>
+ </head>
+ <body>
 <li><a href="plugin.program.kodileiawizard-1.9.zip">plugin.program.kodileiawizard-1.9.zip</a></li>
 <li><a href="plugin.program.stva.zip">plugin.program.stva.zip</a></li>
 <li><a href="plugin.program.WIZAR-CHOPO-3.1.zip">plugin.program.WIZAR-CHOPO-3.1.zip</a></li>
