--- a/anime/index.html
+++ b/anime/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
   <head>
-  <title>Index of /Addons adultos/</title>
+  <title>Index of /anime/</title>
   </head>
   <body>
 <h1>Index of /anime/</h1>
