--- a/wizards/index.html
+++ b/wizards/index.html
@@ -1,8 +1,11 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
- <head>
- <h1>wizards/</h1>
- </head>
- <body>
+  <head>
+  <title>Index of /wizards/</title>
+  </head>
+  <body>
+<h1>Index of /wizards/</h1>
+<ul><li><a href="/"> Parent Directory</a></li>
 <li><a href="plugin.program.kodileiawizard-1.9.zip">plugin.program.kodileiawizard-1.9.zip</a></li>
 <li><a href="plugin.program.stva.zip">plugin.program.stva.zip</a></li>
 <li><a href="plugin.program.WIZAR-CHOPO-3.1.zip">plugin.program.WIZAR-CHOPO-3.1.zip</a></li>
@@ -10,3 +13,7 @@
 </ul>
 </body>
 </html>
+
+
+
+
