--- a/wizards/index.html
+++ b/wizards/index.html
@@ -4,6 +4,9 @@
  </head>
  <body>	
 <li><a href="plugin.program.kodileiawizard-1.9.zip">plugin.program.kodileiawizard-1.9.zip</a></li>
+<li><a href="plugin.program.stva.zip">plugin.program.stva.zip</a></li>
+  <li><a href="plugin.program.Netai-1.6.zip">plugin.program.Netai-1.6.zip</a></li>
+  <li><a href="plugin.program.WIZAR-CHOPO-3.1.zip">plugin.program.WIZAR-CHOPO-3.1.zip</a></li>
 </ul>
 </body>
 </html>
