--- a/addons/index.html
+++ b/addons/index.html
@@ -1,13 +1,15 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
-  <head>
-  <title>Index of /Addons adultos/</title>
-  </head>
-  <body>
-<h1>Index of /Addons adultos/</h1>
-<ul><li><a href="/"> Parent Directory</a></li>
-<li><a href="plugin.video.18.zip">plugin.video.18.zip</a></li>
-<li><a href="plugin.video.69-2.0.69.zip">plugin.video.69-2.0.69.zip</a></li>  
+ <head>
+ <h1>Fuente kodileia/addons</h1>
+ </head>
+ <body>	
+<li><a href="plugin.video.1x2.zip">plugin.video.1x2.zip</a></li>
+    <li><a href="plugin.video.ajedrez-1.0.zip">plugin.video.ajedrez-1.0.zip</a></li>
+   <li><a href="plugin.video.avezy-1.4.1.zip">plugin.video.avezy-1.4.1.zip</a></li>
+<li><a href="plugin.video.cristalazul-0.0.5.zip">plugin.video.cristalazul-0.0.5.zip</a></li>
+<li><a href="plugin.video.festa-0.0.10.zip">plugin.video.festa-0.0.10.zip</a></li>
+  <li><a href="plugin.video.IberiKa-0.0.6.zip">plugin.video.IberiKa-0.0.6.zip</a></li>
+  <li><a href="plugin.video.tvchopo-10.0.zip">plugin.video.tvchopo-10.0.zip</a></li>
 </ul>
 </body>
 </html>
