--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
  <h1>Fuente Kodileia/</h1>
  </head>
  <body>
+  <li><a href="addons/">addons</a><td></td></li>
+  <li><a href="addons-infantiles/">addons-infantiles</a><td></td></li>
+  <li><a href="anime/">anime</a><td></td></li>
 <li><a href="wizards/">wizards</a><td></td></li>
 </ul>
 </body></html>
