--- a/addons/index.html
+++ b/addons/index.html
@@ -4,11 +4,18 @@
  </head>
  <body>	
 <li><a href="plugin.video.1x2.zip">plugin.video.1x2.zip</a></li>
+  <li><a href="plugin.video.aerobic-0.0.2.zip">plugin.video.aerobic-0.0.2.zip</a></li>
     <li><a href="plugin.video.ajedrez-1.0.zip">plugin.video.ajedrez-1.0.zip</a></li>
    <li><a href="plugin.video.avezy-1.4.1.zip">plugin.video.avezy-1.4.1.zip</a></li>
 <li><a href="plugin.video.cristalazul-0.0.5.zip">plugin.video.cristalazul-0.0.5.zip</a></li>
 <li><a href="plugin.video.festa-0.0.10.zip">plugin.video.festa-0.0.10.zip</a></li>
+  <li><a href="plugin.video.foodandtravel.zip">plugin.video.foodandtravel.zip</a></li>
   <li><a href="plugin.video.IberiKa-0.0.6.zip">plugin.video.IberiKa-0.0.6.zip</a></li>
+   <li><a href="plugin.video.Magyck-1.19.0.zip">plugin.video.Magyck-1.19.0.zip</a></li>
+  <li><a href="plugin.video.Manuart-0.0.2.zip">plugin.video.Manuart-0.0.2.zip</a></li>
+  <li><a href="plugin.video.mundocine-1.0.1.zip">plugin.video.mundocine-1.0.1.zip</a></li>
+  <li><a href="plugin.video.mundrone-0.0.4.zip">plugin.video.mundrone-0.0.4.zip</a></li>
+   <li><a href="plugin.video.sinbarreras-1.4.zip">plugin.video.sinbarreras-1.4.zip</a></li>
   <li><a href="plugin.video.tvchopo-10.0.zip">plugin.video.tvchopo-10.0.zip</a></li>
 </ul>
 </body>
