--- a/addons-de-musica/index.html
+++ b/addons-de-musica/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
-  <head>
-  <title>Index of /Addons adultos/</title>
-  </head>
-  <body>
-<h1>Index of /Addons adultos/</h1>
-<ul><li><a href="/"> Parent Directory</a></li>
-<li><a href="plugin.video.18.zip">plugin.video.18.zip</a></li>
-<li><a href="plugin.video.69-2.0.69.zip">plugin.video.69-2.0.69.zip</a></li>  
+ <head>
+ <h1>Fuente kodileia/addons-de-musica</h1>
+ </head>
+ <body>	
+   <li><a href="plugin.video.festa-0.0.10.zip">plugin.video.festa-0.0.10.zip</a></li>
+    <li><a href="plugin.video.insession.zip">plugin.video.insession.zip</a></li>
+   <li><a href="plugin.video.next-0.0.8.zip">plugin.video.next-0.0.8.zip</a></li>
+   <li><a href="plugin.video.noise-1.0.0.zip">plugin.video.noise-1.0.0.zip</a></li>
+   <li><a href="plugin.video.now_music-5.5.9.zip">plugin.video.now_music-5.5.9.zip</a></li>
 </ul>
 </body>
 </html>
