--- a/addons/index.html
+++ b/addons/index.html
@@ -18,6 +18,7 @@
   <li><a href="plugin.video.mundrone-0.0.4.zip">plugin.video.mundrone-0.0.4.zip</a></li>
   <li><a href="plugin.video.palantir.zip">plugin.video.palantir.zip</a></li>
    <li><a href="plugin.video.sinbarreras-1.4.zip">plugin.video.sinbarreras-1.4.zip</a></li>
+  <li><a href="plugin.video.sport365.live.zip">plugin.video.sport365.live.zip</a></li>
   <li><a href="plugin.video.tvchopo-10.0.zip">plugin.video.tvchopo-10.0.zip</a></li>
   <li><a href="plugin.video.youtube-master.zip">plugin.video.youtube-master.zip</a></li>
 </ul>
