--- a/scripts/index.html
+++ b/scripts/index.html
@@ -1,13 +1,20 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
-  <head>
-  <title>Index of /Addons adultos/</title>
-  </head>
-  <body>
-<h1>Index of /Addons adultos/</h1>
-<ul><li><a href="/"> Parent Directory</a></li>
-<li><a href="plugin.video.18.zip">plugin.video.18.zip</a></li>
-<li><a href="plugin.video.69-2.0.69.zip">plugin.video.69-2.0.69.zip</a></li>  
+ <head>
+ <h1>Fuente kodileia/scripts</h1>
+ </head>
+ <body>	
+<li><a href="inputstream.adaptive-2.2.18.zip">inputstream.adaptive-2.2.18.zip</a></li>
+<li><a href="plugin.video.f4mTester-2.7.1.zip">plugin.video.f4mTester-2.7.1.zip</a></li>
+   <li><a href="script.module.metahandler-3.0.2.zip">script.module.metahandler-3.0.2.zip</a></li>
+   <li><a href="script.module.pyamf-0.6.2.zip">script.module.pyamf-0.6.2.zip</a></li>
+   <li><a href="script.module.resolveurl-5.0.29.zip">script.module.resolveurl-5.0.29.zip</a></li>
+   <li><a href="script.module.simplejson-3.4.2.zip">script.module.simplejson-3.4.2.zip</a></li>
+   <li><a href="script.module.streamlink.crypto.zip">script.module.streamlink.crypto.zip</a></li>
+   <li><a href="script.module.streamlink.plugins.zip">script.module.streamlink.plugins.zip</a></li>
+   <li><a href="script.module.urlresolver.zip">script.module.urlresolver.zip</a></li>
+   <li><a href="script.module.youtube.dl.zip">script.module.youtube.dl.zip</a></li>
+   <li><a href="script.video.F4mProxy-2.8.8.zip">script.video.F4mProxy-2.8.8.zip</a></li>
+   <li><a href="xbmc.python-2.25.0.zip">xbmc.python-2.25.0.zip</a></li>
 </ul>
 </body>
 </html>
