--- a/scripts/index.html
+++ b/scripts/index.html
@@ -5,6 +5,7 @@
  <body>	
 <li><a href="inputstream.adaptive-2.2.18.zip">inputstream.adaptive-2.2.18.zip</a></li>
 <li><a href="plugin.video.f4mTester-2.7.1.zip">plugin.video.f4mTester-2.7.1.zip</a></li>
+  <li><a href="script.module.liveresolver.zip">script.module.liveresolver.zip</a></li>
    <li><a href="script.module.metahandler-3.0.2.zip">script.module.metahandler-3.0.2.zip</a></li>
    <li><a href="script.module.pyamf-0.6.2.zip">script.module.pyamf-0.6.2.zip</a></li>
    <li><a href="script.module.resolveurl-5.0.29.zip">script.module.resolveurl-5.0.29.zip</a></li>
