--- a/scripts/index.html
+++ b/scripts/index.html
@@ -5,16 +5,23 @@
  <body>	
 <li><a href="inputstream.adaptive-2.2.18.zip">inputstream.adaptive-2.2.18.zip</a></li>
 <li><a href="plugin.video.f4mTester-2.7.1.zip">plugin.video.f4mTester-2.7.1.zip</a></li>
+  <li><a href="script.module.dateutil-2.5.3.zip">script.module.dateutil-2.5.3.zip</a></li>
+  <li><a href="sscript.module.inputstreamhelper-0.3.3.zip">script.module.inputstreamhelper-0.3.3.zip</a></li>
   <li><a href="script.module.liveresolver.zip">script.module.liveresolver.zip</a></li>
+   <li><a href="script.module.livestreamer.zip">script.module.livestreamer.zip</a></li>
    <li><a href="script.module.metahandler-3.0.2.zip">script.module.metahandler-3.0.2.zip</a></li>
    <li><a href="script.module.pyamf-0.6.2.zip">script.module.pyamf-0.6.2.zip</a></li>
    <li><a href="script.module.resolveurl-5.0.29.zip">script.module.resolveurl-5.0.29.zip</a></li>
+  <li><a href="script.module.simple.downloader-1.9.5.zip">script.module.simple.downloader-1.9.5.zip</a></li>
    <li><a href="script.module.simplejson-3.4.2.zip">script.module.simplejson-3.4.2.zip</a></li>
+  <li><a href="script.module.streamlink.base.zip">script.module.streamlink.base.zip</a></li>
    <li><a href="script.module.streamlink.crypto.zip">script.module.streamlink.crypto.zip</a></li>
    <li><a href="script.module.streamlink.plugins.zip">script.module.streamlink.plugins.zip</a></li>
    <li><a href="script.module.urlresolver.zip">script.module.urlresolver.zip</a></li>
    <li><a href="script.module.youtube.dl.zip">script.module.youtube.dl.zip</a></li>
+  <li><a href="script.pinsentry-master.zip">script.pinsentry-master.zip</a></li>
    <li><a href="script.video.F4mProxy-2.8.8.zip">script.video.F4mProxy-2.8.8.zip</a></li>
+  <li><a href="service.streamlink.proxy.zip">service.streamlink.proxy.zip</a></li>
    <li><a href="xbmc.python-2.25.0.zip">xbmc.python-2.25.0.zip</a></li>
 </ul>
 </body>
