--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
  </head>
  <body>
   <li><a href="addons/">addons</a><td></td></li>
+  <li><a href="addons-de-musica/">addons-de-musica</a><td></td></li>
   <li><a href="addons-infantiles/">addons-infantiles</a><td></td></li>
+   <li><a href="adultos/">adultos</a><td></td></li>
   <li><a href="anime/">anime</a><td></td></li>
+  <li><a href="programas/">programas</a><td></td></li>
+  <li><a href="repositorios/">repositorios</a><td></td></li>
+  <li><a href="scripts/">scripts</a><td></td></li>
+  <li><a href="torrents/">anime</a><td></td></li>
 <li><a href="wizards/">wizards</a><td></td></li>
 </ul>
 </body></html>
