--- a/repositorios/index.html
+++ b/repositorios/index.html
@@ -1,13 +1,28 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
-  <head>
-  <title>Index of /Addons adultos/</title>
-  </head>
-  <body>
-<h1>Index of /Addons adultos/</h1>
-<ul><li><a href="/"> Parent Directory</a></li>
-<li><a href="plugin.video.18.zip">plugin.video.18.zip</a></li>
-<li><a href="plugin.video.69-2.0.69.zip">plugin.video.69-2.0.69.zip</a></li>  
+ <head>
+ <h1>Fuente kodileia/repositorios</h1>
+ </head>
+ <body>	
+<li><a href="repository.alfa-addon-1.0.3.zip">repository.alfa-addon-1.0.3.zip</a></li>
+   <li><a href="repository.bugatsinho-2.1.zip">repository.bugatsinho-2.1.zip</a></li>
+<li><a href="repository.CanalNereo-1.0.2.zip">repository.CanalNereo-1.0.2.zip</a></li>
+   <li><a href="repository.ElRinconDelLolo-1.0.1.zip">repository.ElRinconDelLolo-1.0.1.zip</a></li>
+   <li><a href="repository.festa-1.0.1.zip">repository.festa-1.0.1.zip</a></li>
+   <li><a href="repository.IberiKa-0.0.2.zip">repository.IberiKa-0.0.2.zip</a></li>
+   <li><a href="repository.Jota-C-1.0.1.zip">repository.Jota-C-1.0.1.zip</a></li>
+   <li><a href="repository.jsergio-1.0.4.zip">repository.jsergio-1.0.4.zip</a></li>
+   <li><a href="repository.kodil-1.3.zip">repository.kodil-1.3.zip</a></li>
+   <li><a href="repository.magellan-1.2.zip">repository.magellan-1.2.zip</a></li>
+   <li><a href="repository.Maniac.zip">repository.Maniac.zip</a></li>
+   <li><a href="repository.myshows.me-1.0.5.zip">repository.myshows.me-1.0.5.zip</a></li>
+   <li><a href="repository.netflix-1.0.1.zip">repository.netflix-1.0.1.zip</a></li>
+   <li><a href="repository.onenation-1.0.5.zip">repository.onenation-1.0.5.zip</a></li>
+   <li><a href="repository.Palantir-1.0.1.zip">repository.Palantir-1.0.1.zip</a></li>
+   <li><a href="repository.Realstream-1.2.5.zip">repository.Realstream-1.2.5.zip</a></li>
+   <li><a href="repository.repofamilyleia.zip">repository.repofamilyleia.zip</a></li>
+   <li><a href="repository.tvchopo-2.0.0.zip">repository.tvchopo-2.0.0.zip</a></li>
+   <li><a href="repository.xbmchub.zip">repository.xbmchub.zip</a></li>
+   <li><a href="repository.zachmorris-1.0.0.zip">repository.zachmorris-1.0.0.zip</a></li>
 </ul>
 </body>
 </html>
