--- a/addons-infantiles/index.html
+++ b/addons-infantiles/index.html
@@ -4,7 +4,11 @@
  </head>
  <body>	
 <li><a href="plugin.video.festakids-0.0.4.zip">plugin.video.festakids-0.0.4.zip</a></li>
-<li><a href="plugin.video.Tvchopo.Kids-5.0.zip">plugin.video.Tvchopo.Kids-5.0.zip</a></li>
+  <li><a href="plugin.video.kiddo.zip">plugin.video.kiddo.zip</a></li>
+<li><a href="plugin.video.peketv.zip">plugin.video.peketv.zip</a></li>
+<li><a href="plugin.video.pequelandia.zip">plugin.video.pequelandia.zip</a></li>
+  <li><a href="plugin.video.Tvchopo.Kids-5.0.zip">plugin.video.Tvchopo.Kids-5.0.zip</a></li>
+  <li><a href="plugin.video.YouKids.zip">plugin.video.YouKids.zip</a></li>
 </ul>
 </body>
 </html>
