--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <h1>Fuente Kodileia/</h1>
  </head>
  <body>
+  <li><a href="grupo-telegram/">grupo-telegram</a><td></td></li>
   <li><a href="addons/">addons</a><td></td></li>
   <li><a href="addons-de-musica/">addons-de-musica</a><td></td></li>
   <li><a href="addons-infantiles/">addons-infantiles</a><td></td></li>
@@ -11,7 +12,7 @@
   <li><a href="programas/">programas</a><td></td></li>
   <li><a href="repositorios/">repositorios</a><td></td></li>
   <li><a href="scripts/">scripts</a><td></td></li>
-  <li><a href="torrents/">anime</a><td></td></li>
+  <li><a href="torrents/">torrents</a><td></td></li>
 <li><a href="wizards/">wizards</a><td></td></li>
 </ul>
 </body></html>
