--- a/grupos-telegram-kodi/index.html
+++ b/grupos-telegram-kodi/index.html
@@ -1,13 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
-  <head>
-  <title>Index of /Addons adultos/</title>
-  </head>
-  <body>
-<h1>Index of /Addons adultos/</h1>
-<ul><li><a href="/"> Parent Directory</a></li>
-<li><a href="plugin.video.18.zip">plugin.video.18.zip</a></li>
-<li><a href="plugin.video.69-2.0.69.zip">plugin.video.69-2.0.69.zip</a></li>  
+ <head>
+ <h1>Fuente kodileia/grupos-telegram-kodi</h1>
 </ul>
 </body>
 </html>
