--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <li><a href="programas/">programas</a><td></td></li>
   <li><a href="repositorios/">repositorios</a><td></td></li>
   <li><a href="scripts/">scripts</a><td></td></li>
-  <li><a href="torrents/">torrents</a><td></td></li>
+  <li><a href="quassar-torrentin-elementum/">quassar-torrentin-elementum</a><td></td></li>
+  <li><a href="torrenter/">torrenter</a><td></td></li>
 <li><a href="wizards/">wizards</a><td></td></li>
 </ul>
 </body></html>
