--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
  <h1>Fuente Kodileia/</h1>
  </head>
  <body>
-  <li><a href="grupo-telegram/">grupo-telegram</a><td></td></li>
   <li><a href="addons/">addons</a><td></td></li>
   <li><a href="addons-de-musica/">addons-de-musica</a><td></td></li>
   <li><a href="addons-infantiles/">addons-infantiles</a><td></td></li>
    <li><a href="adultos/">adultos</a><td></td></li>
   <li><a href="anime/">anime</a><td></td></li>
+  <li><a href="apks/">apks</a><td></td></li>
+  <li><a href="ayuda/">ayuda</a><td></td></li>
   <li><a href="programas/">programas</a><td></td></li>
   <li><a href="repositorios/">repositorios</a><td></td></li>
   <li><a href="scripts/">scripts</a><td></td></li>
+  <li><a href="skins/">skins</a><td></td></li>
   <li><a href="quassar-torrentin-elementum/">quassar-torrentin-elementum</a><td></td></li>
   <li><a href="torrenter/">torrenter</a><td></td></li>
+  <li><a href="videoteca/">videoteca</a><td></td></li>
 <li><a href="wizards/">wizards</a><td></td></li>
 </ul>
 </body></html>
