--- a/videoteca/index.html
+++ b/videoteca/index.html
@@ -1,13 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
-  <head>
-  <title>Index of /Addons adultos/</title>
-  </head>
-  <body>
-<h1>Index of /Addons adultos/</h1>
-<ul><li><a href="/"> Parent Directory</a></li>
-<li><a href="plugin.video.18.zip">plugin.video.18.zip</a></li>
-<li><a href="plugin.video.69-2.0.69.zip">plugin.video.69-2.0.69.zip</a></li>  
+ <head>
+ <h1>Fuente kodileia/scripts</h1>
+ </head>
+ <body>	
+<li><a href="context.videotecakodileia-0.0.3-1.zip">context.videotecakodileia-0.0.3-1.zip</a></li>
+<li><a href="context.videotecaplus-0.0.6-6.zip">context.videotecaplus-0.0.6-6.zip</a></li>
 </ul>
 </body>
 </html>
