--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
  <h1>Fuente Kodileia/</h1>
  </head>
  <body>
-  <li><a href="addons/">addons</a><td></td></li>
-  <li><a href="addons-de-musica/">addons-de-musica</a><td></td></li>
+  <li><a href="addons/">Addons</a><td></td></li>
+  <li><a href="addons-de-musica/">Addons de Musica</a><td></td></li>
   <li><a href="addons-infantiles/">addons-infantiles</a><td></td></li>
    <li><a href="adultos/">adultos</a><td></td></li>
   <li><a href="anime/">anime</a><td></td></li>
-  <li><a href="apks/">apks</a><td></td></li>
   <li><a href="ayuda/">ayuda</a><td></td></li>
   <li><a href="programas/">programas</a><td></td></li>
   <li><a href="repositorios/">repositorios</a><td></td></li>
