--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
  <h1>Fuente Kodileia/</h1>
  </head>
  <body>
-  <li><a href="addons/">Addons</a><td></td></li>
-  <li><a href="addons-de-musica/">Addons de Musica</a><td></td></li>
-  <li><a href="addons-infantiles/">Addons Infantiles</a><td></td></li>
-   <li><a href="adultos/">Adultos</a><td></td></li>
-  <li><a href="anime/">Anime</a><td></td></li>
-  <li><a href="ayuda/">Ayuda</a><td></td></li>
-  <li><a href="programas/">Programas</a><td></td></li>
-  <li><a href="repositorios/">Repositorios</a><td></td></li>
-  <li><a href="scripts/">Scripts</a><td></td></li>
-  <li><a href="skins/">Skins</a><td></td></li>
-  <li><a href="quassar-torrentin-elementum/">Elementum,Torrentin, Quasar</a><td></td></li>
-  <li><a href="torrenter/">Torrenter</a><td></td></li>
-  <li><a href="videoteca/">Videoteca</a><td></td></li>
-<li><a href="wizards/">Wizards</a><td></td></li>
+  <li><a href="addons/">addons</a><td></td></li>
+  <li><a href="addons-de-musica/">addons-de-musica</a><td></td></li>
+  <li><a href="addons-infantiles/">addons-infantiles</a><td></td></li>
+   <li><a href="adultos/">adultos</a><td></td></li>
+  <li><a href="anime/">anime</a><td></td></li>
+  <li><a href="ayuda/">ayuda</a><td></td></li>
+  <li><a href="programas/">programas</a><td></td></li>
+  <li><a href="repositorios/">repositorios</a><td></td></li>
+  <li><a href="scripts/">scripts</a><td></td></li>
+  <li><a href="skins/">skins</a><td></td></li>
+  <li><a href="quassar-torrentin-elementum/">quassar-torrentin-elementum</a><td></td></li>
+  <li><a href="torrenter/">torrenter</a><td></td></li>
+  <li><a href="videoteca/">videoteca</a><td></td></li>
+<li><a href="wizards/">wizards</a><td></td></li>
 </ul>
 </body></html>
