--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
  <head>
- <h1>Fuente Kodileia/</h1>
+ <h1>Fuente-Kodileia/</h1>
  </head>
  <body>
   <li><a href="addons/">addons</a><td></td></li>
