--- a/scripts/index.html
+++ b/scripts/index.html
@@ -17,6 +17,7 @@
   <li><a href="script.module.streamlink.base.zip">script.module.streamlink.base.zip</a></li>
    <li><a href="script.module.streamlink.crypto.zip">script.module.streamlink.crypto.zip</a></li>
    <li><a href="script.module.streamlink.plugins.zip">script.module.streamlink.plugins.zip</a></li>
+  <li><a href="script.module.win_inet_pton-1.1.0.zip">script.module.win_inet_pton-1.1.0.zip</a></li>
    <li><a href="script.module.urlresolver.zip">script.module.urlresolver.zip</a></li>
    <li><a href="script.module.youtube.dl.zip">script.module.youtube.dl.zip</a></li>
   <li><a href="script.pinsentry-master.zip">script.pinsentry-master.zip</a></li>
