--- a/addons/index.html
+++ b/addons/index.html
@@ -3,7 +3,7 @@
  <h1>Fuente kodileia/addons</h1>
  </head>
  <body>	
-<li><a href="plugin.video.1x2.zip">plugin.video.1x2.zip</a></li>
+<li><a href="plugin.video.1x2-1.0.15.zip">plugin.video.1x2-1.0.15.zip</a></li>
   <li><a href="plugin.video.aerobic-0.0.2.zip">plugin.video.aerobic-0.0.2.zip</a></li>
     <li><a href="plugin.video.ajedrez-1.0.zip">plugin.video.ajedrez-1.0.zip</a></li>
    <li><a href="plugin.video.avezy-1.4.1.zip">plugin.video.avezy-1.4.1.zip</a></li>
