--- a/addons/index.html
+++ b/addons/index.html
@@ -16,7 +16,7 @@
   <li><a href="plugin.video.Manuart-0.0.2.zip">plugin.video.Manuart-0.0.2.zip</a></li>
   <li><a href="plugin.video.mundocine-1.0.1.zip">plugin.video.mundocine-1.0.1.zip</a></li>
   <li><a href="plugin.video.mundrone-0.0.4.zip">plugin.video.mundrone-0.0.4.zip</a></li>
-  <li><a href="plugin.audio.onair.zip">plugin.audio.onair-1.4.zip</a></li>
+  <li><a href="plugin.audio.onair.zip">plugin.audio.onair.zip</a></li>
   <li><a href="plugin.video.palantir.zip">plugin.video.palantir.zip</a></li>
    <li><a href="plugin.video.sinbarreras-1.4.zip">plugin.video.sinbarreras-1.4.zip</a></li>
   <li><a href="plugin.video.sport365.live.zip">plugin.video.sport365.live.zip</a></li>
