--- a/scripts/index.html
+++ b/scripts/index.html
@@ -12,14 +12,14 @@
    <li><a href="script.module.livestreamer.zip">script.module.livestreamer.zip</a></li>
    <li><a href="script.module.metahandler-3.0.2.zip">script.module.metahandler-3.0.2.zip</a></li>
    <li><a href="script.module.pyamf-0.6.2.zip">script.module.pyamf-0.6.2.zip</a></li>
-   <li><a href="script.module.resolveurl-5.0.29.zip">script.module.resolveurl-5.0.29.zip</a></li>
+   <li><a href="script.module.resolveurl-5.0.36.zip">script.module.resolveurl-5.0.36.zip</a></li>
   <li><a href="script.module.simple.downloader-1.9.5.zip">script.module.simple.downloader-1.9.5.zip</a></li>
    <li><a href="script.module.simplejson-3.4.2.zip">script.module.simplejson-3.4.2.zip</a></li>
   <li><a href="script.module.streamlink.base.zip">script.module.streamlink.base.zip</a></li>
    <li><a href="script.module.streamlink.crypto.zip">script.module.streamlink.crypto.zip</a></li>
    <li><a href="script.module.streamlink.plugins.zip">script.module.streamlink.plugins.zip</a></li>
   <li><a href="script.module.win_inet_pton-1.1.0.zip">script.module.win_inet_pton-1.1.0.zip</a></li>
-   <li><a href="script.module.urlresolver.zip">script.module.urlresolver.zip</a></li>
+   <li><a href="script.module.urlresolver-5.0.44.zip">script.module.urlresolver-5.0.44.zip</a></li>
    <li><a href="script.module.youtube.dl.zip">script.module.youtube.dl.zip</a></li>
   <li><a href="script.pinsentry-master.zip">script.pinsentry-master.zip</a></li>
    <li><a href="script.video.F4mProxy-2.8.8.zip">script.video.F4mProxy-2.8.8.zip</a></li>
