--- a/programas/index.html
+++ b/programas/index.html
@@ -3,7 +3,8 @@
  <h1>Fuente kodileia/programas</h1>
  </head>
  <body>	
-<li><a href="lugin.program.advancedsettings-0.8.9.zip">lugin.program.advancedsettings-0.8.9.zip</a></li>
+  <li><a href="Kodi-Addon-Hi-Frequency-Switcher-master.zip">Kodi-Addon-Hi-Frequency-Switcher-master.zip</a></li>
+<li><a href="plugin.program.advancedsettings-0.8.9.zip">plugin.program.advancedsettings-0.8.9.zip</a></li>
 <li><a href="plugin.program.ADVSet-2.4.zip">plugin.program.ADVSet-2.4.zip</a></li>
    <li><a href="plugin.program.chrome.launcher-v2.0.0.-UNIVERSAL.zip">plugin.program.chrome.launcher-v2.0.0.-UNIVERSAL.zip</a></li>
    <li><a href="plugin.program.super.favourites.zip">plugin.program.super.favourites.zip</a></li>
