--- a/programas/index.html
+++ b/programas/index.html
@@ -3,13 +3,13 @@
  <h1>Fuente kodileia/programas</h1>
  </head>
  <body>	
-  <li><a href="Kodi-Addon-Hi-Frequency-Switcher-master.zip">Kodi-Addon-Hi-Frequency-Switcher-master.zip</a></li>
 <li><a href="plugin.program.advancedsettings-0.8.9.zip">plugin.program.advancedsettings-0.8.9.zip</a></li>
 <li><a href="plugin.program.ADVSet-2.4.zip">plugin.program.ADVSet-2.4.zip</a></li>
    <li><a href="plugin.program.chrome.launcher-v2.0.0.-UNIVERSAL.zip">plugin.program.chrome.launcher-v2.0.0.-UNIVERSAL.zip</a></li>
    <li><a href="plugin.program.super.favourites.zip">plugin.program.super.favourites.zip</a></li>
    <li><a href="program.plexus.zip">program.plexus.zip</a></li>
   <li><a href="script.plexus.patcher-1.0.7.zip">script.plexus.patcher-1.0.7.zip</a></li>
+  <li><a href="script.video.fswitch.zip">script.video.fswitch.zip</a></li>
 </ul>
 </body>
 </html>
