--- a/addons/index.html
+++ b/addons/index.html
@@ -4,7 +4,7 @@
  </head>
  <body>	
   <li><a href="plugin.audio.onair.zip">plugin.audio.onair.zip</a></li>
-<li><a href="plugin.video.1x2-1.0.22.zip">plugin.video.1x2-1.0.22.zip</a></li>
+<li><a href="plugin.video.1x2.zip">plugin.video.1x2.zip</a></li>
   <li><a href="plugin.video.aerobic-0.0.2.zip">plugin.video.aerobic-0.0.2.zip</a></li>
     <li><a href="plugin.video.ajedrez-1.0.zip">plugin.video.ajedrez-1.0.zip</a></li>
    <li><a href="plugin.video.avezy-1.4.1.zip">plugin.video.avezy-1.4.1.zip</a></li>
