--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <li><a href="quassar-torrentin-elementum/">quassar-torrentin-elementum</a><td></td></li>
   <li><a href="torrenter/">torrenter</a><td></td></li>
   <li><a href="videoteca/">videoteca</a><td></td></li>
+  <li><a href="vpn/">vpn</a><td></td></li>
 <li><a href="wizards/">wizards</a><td></td></li>
 </ul>
 </body></html>
