--- a/videoteca/index.html
+++ b/videoteca/index.html
@@ -1,6 +1,6 @@
 <html>
  <head>
- <h1>Fuente kodileia/scripts</h1>
+ <h1>Fuente kodileia/videoteca</h1>
  </head>
  <body>	
 <li><a href="context.videotecakodileia-0.0.3-1.zip">context.videotecakodileia-0.0.3-1.zip</a></li>
