--- a/programas/index.html
+++ b/programas/index.html
@@ -9,7 +9,7 @@
    <li><a href="plugin.program.super.favourites.zip">plugin.program.super.favourites.zip</a></li>
    <li><a href="program.plexus.zip">program.plexus.zip</a></li>
   <li><a href="script.plexus.patcher-1.0.7.zip">script.plexus.patcher-1.0.7.zip</a></li>
-  <li><a href="script.video.fswitch.zip">script.video.fswitch.zip</a></li>
+  <li><a href="script.video.fswitch-2.1.1.zip">script.video.fswitch-2.1.1.zip</a></li>
 </ul>
 </body>
 </html>
