--- a/vpn-windows/index.html
+++ b/vpn-windows/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
   <head>
-  <title>Index of /Addons adultos/</title>
+  <title>Index of /vpn-windows/</title>
   </head>
   <body>
-<h1>Index of /Addons adultos/</h1>
+<h1>Index of /vpn-windows/</h1>
 <ul><li><a href="/"> Parent Directory</a></li>
-<li><a href="plugin.video.18.zip">plugin.video.18.zip</a></li>
-<li><a href="plugin.video.69-2.0.69.zip">plugin.video.69-2.0.69.zip</a></li>  
-</ul>
+<li><a href="psiphon3.exe">psiphon3.exe</a></li>
 </body>
 </html>
