--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <li><a href="torrenter/">torrenter</a><td></td></li>
   <li><a href="videoteca/">videoteca</a><td></td></li>
   <li><a href="vpn/">vpn</a><td></td></li>
+  <li><a href="vpn-windows/">vpn-windows</a><td></td></li>
 <li><a href="wizards/">wizards</a><td></td></li>
 </ul>
 </body></html>
