--- a/vpn/index.html
+++ b/vpn/index.html
@@ -9,7 +9,7 @@
 <li><a href="Adguard_3.3.156_Jooode_Nightly.apk">Adguard_3.3.156_Jooode_Nightly.apk</a></li>
 <li><a href="intra-1-1-9.apk">intra-1-1-9.apk</a></li> 
 <li><a href="VPNhub.apk">VPNhub.apk</a></li>
-<li><a href="VPNhub-2B1.4.1-Premium Mod.apk">VPNhub-2B1.4.1-Premium Mod.apkk</a></li> 
+<li><a href="VPNhub-2B1.4.1-Premium Mod.apk">VPNhub-2B1.4.1-Premium Mod.apk</a></li> 
 </ul>
 </body>
 </html>
