--- a/addons/index.html
+++ b/addons/index.html
@@ -22,6 +22,10 @@
   <li><a href="plugin.video.sport365.live.zip">plugin.video.sport365.live.zip</a></li>
   <li><a href="plugin.video.tvchopo-13.zip">plugin.video.tvchopo-13.zip</a></li>
   <li><a href="plugin.video.youtube-master.zip">plugin.video.youtube-master.zip</a></li>
+   <li><a href="plugin.video.mitele-1.0.5.zip">plugin.video.mitele-1.0.5.zip</a></li>
+  <li><a href="plugin.video.atresplayer-1.0.5.zip">plugin.video.atresplayer-1.0.5.zip</a></li>
+  <li><a href="plugin.video.rtve-1.0.5.zip">plugin.video.rtve-1.0.5.zip</a></li>
+  <li><a href="plugin.video.eitbalacarta-1.0.5.zip">plugin.video.eitbalacarta-1.0.5.zip</a></li>
 </ul>
 </body>
 </html>
