--- a/repositorios/index.html
+++ b/repositorios/index.html
@@ -8,8 +8,8 @@
 <li><a href="repository.CanalNereo-1.0.2.zip">repository.CanalNereo-1.0.2.zip</a></li>
    <li><a href="repository.ElRinconDelLolo-1.0.1.zip">repository.ElRinconDelLolo-1.0.1.zip</a></li>
    <li><a href="repository.festa-1.0.1.zip">repository.festa-1.0.1.zip</a></li>
+  <li><a href="repository.hirayasoftware-1.0.0.zip">repository.hirayasoftware-1.0.0.zip</a></li>
    <li><a href="repository.IberiKa-0.0.2.zip">repository.IberiKa-0.0.2.zip</a></li>
-   <li><a href="repository.Jota-C-1.0.1.zip">repository.Jota-C-1.0.1.zip</a></li>
    <li><a href="repository.jsergio-1.0.4.zip">repository.jsergio-1.0.4.zip</a></li>
    <li><a href="repository.kodil-1.3.zip">repository.kodil-1.3.zip</a></li>
    <li><a href="repository.magellan-1.2.zip">repository.magellan-1.2.zip</a></li>
