--- a/addons/index.html
+++ b/addons/index.html
@@ -26,6 +26,7 @@
   <li><a href="plugin.video.atresplayer-1.0.5.zip">plugin.video.atresplayer-1.0.5.zip</a></li>
   <li><a href="plugin.video.rtve-1.0.5.zip">plugin.video.rtve-1.0.5.zip</a></li>
   <li><a href="plugin.video.eitbalacarta-1.0.5.zip">plugin.video.eitbalacarta-1.0.5.zip</a></li>
+  <li><a href="plugin.video.tv3alacarta-1.0.5.zip">plugin.video.tv3alacarta-1.0.5.zip</a></li>
 </ul>
 </body>
 </html>
