--- a/scripts/index.html
+++ b/scripts/index.html
@@ -4,6 +4,7 @@
  </head>
  <body>	
   <li><a href="script.i.cristalazul.zip">script.i.cristalazul.zip</a></li>
+  <li><a href="script.module.TvTap.zip">script.module.TvTap.zip</a></li>
 <li><a href="inputstream.adaptive-2.2.18.zip">inputstream.adaptive-2.2.18.zip</a></li>
 <li><a href="plugin.video.f4mTester-2.7.1.zip">plugin.video.f4mTester-2.7.1.zip</a></li>
   <li><a href="script.module.dateutil-2.5.3.zip">script.module.dateutil-2.5.3.zip</a></li>
