--- a/wizards/index.html
+++ b/wizards/index.html
@@ -8,6 +8,7 @@
   <li><a href="plugin.program.chikirywizard.zip">plugin.program.chikirywizard.zip</a></li>
   <li><a href="plugin.program.Netai-1.6.zip">plugin.program.Netai-1.6.zip</a></li>
   <li><a href="plugin.program.WIZAR-CHOPO-3.1.zip">plugin.program.WIZAR-CHOPO-3.1.zip</a></li>
+   <li><a href="plugin.program.nereowizard.zip">plugin.program.nereowizard.zip</a></li>
 </ul>
 </body>
 </html>
