--- a/instaladores/index.html
+++ b/instaladores/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
   <head>
-  <title>Index of /addons/</title>
+  <title>Index of /instaladores/</title>
   </head>
   <body>
-<h1>Index of /addons/</h1>
+<h1>Index of /instaladores/</h1>
 <ul><li><a href="/"> Parent Directory</a></li>
-<li><a href="plugin.video.xxxxxx.zip">plugin.video.xxxxxx.zip</a></li>
-<li><a href="plugin.video.xxxxxx.zip">plugin.video.xxxxxx.zip</a></li>  
+<li><a href="script.i.cristalazul.zip">script.i.cristalazul.zip</a></li>
+<li><a href="script.i.realstream-1.0.zip">script.i.realstream-1.0.zip</a></li> 
+<li><a href="script.luar-0.1.8.zip">script.luar-0.1.8.zip</a></li>
 </ul>
 </body>
 </html>
