--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
-  <head>
-  <title>Index of /addons/</title>
-  </head>
-  <body>
-<h1>Index of /addons/</h1>
-<ul><li><a href="/"> Parent Directory</a></li>
-<li><a href="plugin.video.xxxxxx.zip">plugin.video.xxxxxx.zip</a></li>
-<li><a href="plugin.video.xxxxxx.zip">plugin.video.xxxxxx.zip</a></li>  
-</ul>
-</body>
-</html>
+ <head>
+ <h1>Fuente Kodileia/</h1>
+ </head>
+ <body>
+		<li><a href="addons-de musica/">addons-de musica</a><td></td></li>
+	<li><a href="addons-infantiles/">addons-infantiles</a><td></td></li>
+	<li><a href="addons/">addons</a><td></td></li>
+	<li><a href="adultos/">adultos</a><td></td></li>
+	<li><a href="anime/">anime</a><td></td></li>
+   <li><a href="ayuda/">ayuda</a><td></td></li>
+    <li><a href="instaladores/">instaladores</a><td></td></li>
+   <li><a href="programas/">programas</a><td></td></li>
+   <li><a href="quassar-torrentin-elementum/">quassar-torrentin-elementum</a><td></td></li>
+    <li><a href="repositorios/">repositorios</a><td></td></li>
+   <li><a href="scripts/">scripts</a><td></td></li>
+   <li><a href="skins/">skins</a><td></td></li>
+   <li><a href="torrenter/">torrenter</a><td></td></li>
+   <li><a href="vioteca/">videoteca</a><td></td></li>
+	<li><a href="vpn-windows/">vpn-windows</a><td></td></li>
+   <li><a href="wizards/">wizards</a><td></td></li>
+	
+
+</body></html>
