--- a/wizards/index.html
+++ b/wizards/index.html
@@ -4,6 +4,7 @@
  </head>
  <body>	
 <li><a href="plugin.program.kodileiawizard-1.9.zip">plugin.program.kodileiawizard-1.9.zip</a></li>
+  <li><a href="plugin.program.kodileiawizard-1.10.zip">plugin.program.kodileiawizard-1.10.zip</a></li>
 <li><a href="plugin.program.stva-3.6.zip">plugin.program.stva-3.6.zip</a></li>
   <li><a href="plugin.program.chikirywizard.zip">plugin.program.chikirywizard.zip</a></li>
   <li><a href="plugin.program.Netai-1.6.zip">plugin.program.Netai-1.6.zip</a></li>
