--- a/skins/index.html
+++ b/skins/index.html
@@ -4,6 +4,7 @@
  </head>
  <body>	
 <li><a href="repository.aeon.nox.silvo.zip">repository.aeon.nox.silvo.zip</a></li>
+  <li><a href="hellyrepo.kodi.zip">hellyrepo.kodi.zip</a></li>
 </ul>
 </body>
 </html>
