--- a/videoteca/index.html
+++ b/videoteca/index.html
@@ -1,10 +1,21 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
- <head>
- <h1>Fuente kodileia/videoteca</h1>
- </head>
- <body>	
+  <head>
+  <title>Index of /videoteca/</title>
+  </head>
+  <body>
+<h1>Index of /videoteca/</h1>
+<ul><li><a href="/"> Parent Directory</a></li>
 <li><a href="context.videotecakodileia-0.0.3-1.zip">context.videotecakodileia-0.0.3-1.zip</a></li>
 <li><a href="context.videotecaplus-0.0.6-6.zip">context.videotecaplus-0.0.6-6.zip</a></li>
 </ul>
 </body>
 </html>
+
+
+
+
+
+
+
+
