--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <li><a href="scripts/">scripts</a><td></td></li>
    <li><a href="skins/">skins</a><td></td></li>
    <li><a href="torrenter/">torrenter</a><td></td></li>
-   <li><a href="vioteca/">videoteca</a><td></td></li>
+   <li><a href="videoteca/">videoteca</a><td></td></li>
 	<li><a href="vpn-windows/">vpn-windows</a><td></td></li>
    <li><a href="wizards/">wizards</a><td></td></li>
 	
