--- a/vpn/index.html
+++ b/vpn/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
   <head>
-  <title>Index of /vpn-android/</title>
+  <title>Index of /vpn/</title>
   </head>
   <body>
-<h1>Index of /vpn-android/</h1>
+<h1>Index of /vpn/</h1>
 <ul><li><a href="/"> Parent Directory</a></li>
 <li><a href="Adguard_3.4.11+Nightly__JooodeOS.apk">Adguard_3.4.11+Nightly__JooodeOS.apk</a></li>
 <li><a href="intra-1-1-9.apk">intra-1-1-9.apk</a></li> 
