--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <h1>Fuente Kodileia/</h1>
  </head>
  <body>
-		<li><a href="addons-de musica/">addons-de musica</a><td></td></li>
+		<li><a href="addons-de-musica/">addons-de-musica</a><td></td></li>
 	<li><a href="addons-infantiles/">addons-infantiles</a><td></td></li>
 	<li><a href="addons/">addons</a><td></td></li>
 	<li><a href="adultos/">adultos</a><td></td></li>
@@ -17,7 +17,7 @@
    <li><a href="skins/">skins</a><td></td></li>
    <li><a href="torrenter/">torrenter</a><td></td></li>
    <li><a href="videoteca/">videoteca</a><td></td></li>
-	 <li><a href="vpn-android/">vpn-android</a><td></td></li>
+	 <li><a href="vpn/">vpn</a><td></td></li>
 	<li><a href="vpn-windows/">vpn-windows</a><td></td></li>
    <li><a href="wizards/">wizards</a><td></td></li>
 	
