--- a/addons/index.html
+++ b/addons/index.html
@@ -3,6 +3,7 @@
  <h1>Fuente kodileia/addons</h1>
  </head>
  <body>	
+  <li><a href="mediaexplorer-kodi-2.0.zip">mediaexplorer-kodi-2.0.zip</a></li>
   <li><a href="plugin.audio.onair.zip">plugin.audio.onair.zip</a></li>
 <li><a href="plugin.video.1x2.zip">plugin.video.1x2.zip</a></li>
   <li><a href="plugin.video.aerobic-0.0.2.zip">plugin.video.aerobic-0.0.2.zip</a></li>
