--- a/anime/index.html
+++ b/anime/index.html
@@ -7,6 +7,7 @@
 <h1>Index of /anime/</h1>
 <ul><li><a href="/"> Parent Directory</a></li>
 <li><a href="plugin.video.Lilianime-0.0.6.zip">plugin.video.Lilianime-0.0.6.zip</a></li>
+  <li><a href="script.i.cristalazul.zip">script.i.cristalazul.zip</a></li>
 </ul>
 </body>
-</html>
+</html> 
