--- a/grupo_kodileia/index.html
+++ b/grupo_kodileia/index.html
@@ -6,6 +6,7 @@
   <body>
 <h1>Index of /grupo_kodileia/</h1>
 <ul><li><a href="/"> Parent Directory</a></li>
+  <li><a href="packcristalazul.zip">packcristalazul.zip</a></li>
 <li><a href="script.i.cristalazul-1.2.zip">script.i.cristalazul-1.2.zip</a></li>
 </ul>
 </body>
