--- a/addons-infantiles/index.html
+++ b/addons-infantiles/index.html
@@ -3,6 +3,7 @@
  <h1>Fuente kodileia/addons-infantiles</h1>
  </head>
  <body>	
+  <li><a href="packcristalazul.zip">packcristalazul.zip</a></li>
 <li><a href="plugin.video.festakids-0.0.4.zip">plugin.video.festakids-0.0.4.zip</a></li>
   <li><a href="plugin.video.kiddo.zip">plugin.video.kiddo.zip</a></li>
 <li><a href="plugin.video.peketv.zip">plugin.video.peketv.zip</a></li>
