--- a/programas/index.html
+++ b/programas/index.html
@@ -6,6 +6,7 @@
 <li><a href="plugin.program.advancedsettings-0.8.9.zip">plugin.program.advancedsettings-0.8.9.zip</a></li>
 <li><a href="plugin.program.ADVSet-2.4.zip">plugin.program.ADVSet-2.4.zip</a></li>
    <li><a href="plugin.program.chrome.launcher-v2.0.0.-UNIVERSAL.zip">plugin.program.chrome.launcher-v2.0.0.-UNIVERSAL.zip</a></li>
+  <li><a href="plugin.program.KGI-0.0.3.zip">plugin.program.KGI-0.0.3.zip</a></li>
   <li><a href="script.limpiarkodi.zip">script.limpiarkodi.zip</a></li>
    <li><a href="plugin.program.super.favourites.zip">plugin.program.super.favourites.zip</a></li>
    <li><a href="program.plexus.zip">program.plexus.zip</a></li>
