--- a/programas/index.html
+++ b/programas/index.html
@@ -11,7 +11,7 @@
    <li><a href="program.plexus.zip">program.plexus.zip</a></li>
   <li><a href="script.plexus.patcher-1.0.7.zip">script.plexus.patcher-1.0.7.zip</a></li>
   <li><a href="script.video.fswitch-2.1.1.zip">script.video.fswitch-2.1.1.zip</a></li>
-  <li><a href="plugin.program.KGI-1.0.0">plugin.program.KGI-1.0.0</a></li>
+  <li><a href="plugin.program.KGI-1.0.0.zip">plugin.program.KGI-1.0.0.zip</a></li>
 </ul>
 </body>
 </html>
