--- a/ayuda/index.html
+++ b/ayuda/index.html
@@ -13,6 +13,7 @@
    <li><a href="script.video.F4mProxy-2.8.8.zip">script.video.F4mProxy-2.8.8.zip</a></li>
  <li><a href="plugin.video.f4mTester-2.7.1.zip">plugin.video.f4mTester-2.7.1.zip</a></li>
    <li><a href="xbmc.python-2.25.0.zip">xbmc.python-2.25.0.zip</a></li>
+  <li><a href="repository.resolverurl.zip">repository.resolverurl.zip</a></li>
 </ul>
 </body>
 </html>
