--- a/repositorios/index.html
+++ b/repositorios/index.html
@@ -16,10 +16,10 @@
    <li><a href="repository.Maniac.zip">repository.Maniac.zip</a></li>
    <li><a href="repository.myshows.me-1.0.5.zip">repository.myshows.me-1.0.5.zip</a></li>
    <li><a href="repository.netflix-1.0.1.zip">repository.netflix-1.0.1.zip</a></li>
-   <li><a href="repository.onenation-1.0.5.zip">repository.onenation-1.0.5.zip</a></li>
    <li><a href="repository.Palantir-1.0.1.zip">repository.Palantir-1.0.1.zip</a></li>
    <li><a href="repository.Realstream-1.2.5.zip">repository.Realstream-1.2.5.zip</a></li>
    <li><a href="repository.repofamilyleia.zip">repository.repofamilyleia.zip</a></li>
+  <li><a href="repository.resolverurl.zip">repository.resolverurl.zip</a></li>
    <li><a href="repository.tvchopo-2.0.0.zip">repository.tvchopo-2.0.0.zip</a></li>
    <li><a href="repository.xbmchub.zip">repository.xbmchub.zip</a></li>
    <li><a href="repository.zachmorris-1.0.0.zip">repository.zachmorris-1.0.0.zip</a></li>
