--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
  </head>
  <body>
 	<li><a href="grupo_kodileia/">grupo_kodileia</a><td></td></li>	
+	 <li><a href="addons-creator/">addons-creator</a><td></td></li>
 	 <li><a href="addons-de-musica/">addons-de-musica</a><td></td></li>
 	<li><a href="addons-infantiles/">addons-infantiles</a><td></td></li>
 	<li><a href="addons/">addons</a><td></td></li>
