--- a/wizards/index.html
+++ b/wizards/index.html
@@ -9,6 +9,7 @@
   <li><a href="plugin.program.Netai-1.6.zip">plugin.program.Netai-1.6.zip</a></li>
   <li><a href="plugin.program.WIZAR-CHOPO-3.1.zip">plugin.program.WIZAR-CHOPO-3.1.zip</a></li>
    <li><a href="plugin.program.nereowizard.zip">plugin.program.nereowizard.zip</a></li>
+  <li><a href="plugin.program.tecnokodiwizard.zip">plugin.program.tecnokodiwizard.zip</a></li>
 </ul>
 </body>
 </html>
