--- a/addons/index.html
+++ b/addons/index.html
@@ -13,16 +13,14 @@
 <li><a href="plugin.video.cristalazul-0.0.7.zip">plugin.video.cristalazul-0.0.7.zip</a></li>
 <li><a href="plugin.video.festa-0.0.10.zip">plugin.video.festa-0.0.10.zip</a></li>
   <li><a href="plugin.video.foodandtravel.zip">plugin.video.foodandtravel.zip</a></li>
-  <li><a href="plugin.video.IberiKa-0.0.8.zip">plugin.video.IberiKa-0.0.8.zip</a></li>
-  <li><a href="plugin.video.iNovelas.zip">plugin.video.iNovelas.zip</a></li>
-   <li><a href="plugin.video.Magyck-1.19.0.zip">plugin.video.Magyck-1.19.0.zip</a></li>
-  <li><a href="plugin.video.Manuart-0.0.2.zip">plugin.video.Manuart-0.0.2.zip</a></li>
+ <li><a href="plugin.video.Manuart-0.0.2.zip">plugin.video.Manuart-0.0.2.zip</a></li>
   <li><a href="plugin.video.mundocine-1.0.5.zip">plugin.video.mundocine-1.0.5.zip</a></li>
   <li><a href="plugin.video.mundrone-0.0.4.zip">plugin.video.mundrone-0.0.4.zip</a></li>
   <li><a href="plugin.video.palantir.zip">plugin.video.palantir.zip</a></li>
    <li><a href="plugin.video.sinbarreras-1.4.zip">plugin.video.sinbarreras-1.4.zip</a></li>
   <li><a href="plugin.video.sport365.live.zip">plugin.video.sport365.live.zip</a></li>
   <li><a href="plugin.video.tvchopo-13.zip">plugin.video.tvchopo-13.zip</a></li>
+   <li><a href="plugin.video.chopocine-1.0.zip">plugin.video.chopocine-1.0.zip</a></li>
   <li><a href="plugin.video.youtube-master.zip">plugin.video.youtube-master.zip</a></li>
    <li><a href="plugin.video.mitele-1.0.5.zip">plugin.video.mitele-1.0.5.zip</a></li>
   <li><a href="plugin.video.atresplayer-1.0.5.zip">plugin.video.atresplayer-1.0.5.zip</a></li>
