--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
  <h1>Fuente Kodileia/</h1>
  </head>
  <body>
-	<li><a href="grupo_kodileia/">grupo_kodileia</a><td></td></li>	
+	<li><a href="grupo_kodileia/">grupo_kodileia</a><td></td></li>
+	 <li><a href="addon-inclusivo/">addon-inclusivo</a><td></td></li>
 	 <li><a href="addons-de-musica/">addons-de-musica</a><td></td></li>
 	<li><a href="addons-infantiles/">addons-infantiles</a><td></td></li>
 	<li><a href="addons/">addons</a><td></td></li>
