--- a/addons-infantiles/index.html
+++ b/addons-infantiles/index.html
@@ -7,8 +7,8 @@
   <li><a href="plugin.video.kiddo.zip">plugin.video.kiddo.zip</a></li>
 <li><a href="plugin.video.peketv.zip">plugin.video.peketv.zip</a></li>
 <li><a href="plugin.video.pequelandia.zip">plugin.video.pequelandia.zip</a></li>
-  <li><a href="plugin.video.Tvchopo.Kids-5.0.zip">plugin.video.Tvchopo.Kids-5.0.zip</a></li>
-  <li><a href="plugin.video.YouKids.zip">plugin.video.YouKids.zip</a></li>
+  <li><a href="plugin.video.clan-1.0.1.zip">plugin.video.clan-1.0.1.zip</a></li>
+  <li><a href="plugin.video.watchnixtoons2-0.4.2">plugin.video.watchnixtoons2-0.4.2</a></li>
 </ul>
 </body>
 </html>
