--- a/addons-desde-repositorio/index.html
+++ b/addons-desde-repositorio/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
   <head>
-  <title>Index of /addons/</title>
+  <title>Index of /addons-desde-repositorio/</title>
   </head>
   <body>
-<h1>Index of /addons/</h1>
+<h1>Index of /addons-desde-repositorio/</h1>
 <ul><li><a href="/"> Parent Directory</a></li>
-<li><a href="plugin.video.xxxxxx.zip">plugin.video.xxxxxx.zip</a></li>
-<li><a href="plugin.video.xxxxxx.zip">plugin.video.xxxxxx.zip</a></li>  
+<li><a href="repository.balandro-1.0.3.zip">repository.balandro-1.0.3.zip</a></li>
+<li><a href="repository.bugatsinho-2.4.zip">repository.bugatsinho-2.4.zip</a></li>
+  <li><a href="repository.hirayasoftware-1.0.1.zip">repository.hirayasoftware-1.0.1.zip</a></li>
+  <li><a href="repository.magellan-1.2.zip">repository.magellan-1.2.zip</a></li>
+  <li><a href="repository.Palantir-1.0.1.zip">repository.Palantir-1.0.1.zip</a></li>
 </ul>
 </body>
 </html>
