--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<li><a href="adultos/">adultos</a><td></td></li>
 	<li><a href="anime/">anime</a><td></td></li>
    <li><a href="ayuda/">ayuda</a><td></td></li>
-    <li><a href="instaladores/">instaladores</a><td></td></li>
+    <li><a href="addons-instaladores/">addons-instaladores</a><td></td></li>
    <li><a href="programas/">programas</a><td></td></li>
    <li><a href="quassar-torrentin-elementum/">quassar-torrentin-elementum</a><td></td></li>
     <li><a href="repositorios/">repositorios</a><td></td></li>
