--- a/addons-tv-y-deportes/index.html
+++ b/addons-tv-y-deportes/index.html
@@ -9,6 +9,7 @@
 <li><a href="plugin.video.cristalazul-0.0.9.zip">plugin.video.cristalazul-0.0.9.zip</a></li>
 <li><a href="repository.bugatsinho-2.4.zip">repository.bugatsinho-2.4.zip</a></li>
   <li><a href="repository.magellan-1.2.zip">repository.magellan-1.2.zip</a></li>
+  <li><a href="repository.hirayasoftware-1.0.1.zip">repository.hirayasoftware-1.0.1.zip</a></li>
 </ul>
 </body>
 </html>
