--- a/addons-tv-y-deportes/index.html
+++ b/addons-tv-y-deportes/index.html
@@ -10,6 +10,7 @@
 <li><a href="repository.bugatsinho-2.4.zip">repository.bugatsinho-2.4.zip</a></li>
   <li><a href="repository.magellan-1.2.zip">repository.magellan-1.2.zip</a></li>
   <li><a href="repository.hirayasoftware-1.0.1.zip">repository.hirayasoftware-1.0.1.zip</a></li>
+  <li><a href="plugin.video.winner-1.0.0">plugin.video.winner-1.0.0</a></li>
 </ul>
 </body>
 </html>
