--- a/repositorios/index.html
+++ b/repositorios/index.html
@@ -5,7 +5,7 @@
  <body>	
    <li><a href="repository.bugatsinho-2.1.zip">repository.bugatsinho-2.1.zip</a></li>
 <li><a href="repository.balandro-1.0.3.zip">repository.balandro-1.0.3.zip</a></li>
-  <li><a href="repository.camaradas.repo-2.0">repository.camaradas.repo-2.0</a></li>
+  <li><a href="repository.camaradas.repo-2.0.zip">repository.camaradas.repo-2.0.zip</a></li>
    <li><a href="repository.festa-1.0.1.zip">repository.festa-1.0.1.zip</a></li>
   <li><a href="repository.hirayasoftware-1.0.1.zip">repository.hirayasoftware-1.0.1.zip</a></li>
    <li><a href="repository.jansolo-0.0.1.zip">repository.jansolo-0.0.1.zip</a></li>
