--- a/ayuda/index.html
+++ b/ayuda/index.html
@@ -7,6 +7,7 @@
   <li><a href="script.module.liveresolver.zip">script.module.liveresolver.zip</a></li>
    <li><a href="script.module.metahandler-3.0.2.zip">script.module.metahandler-3.0.2.zip</a></li>
    <li><a href="script.module.pyamf-0.6.2.zip">script.module.pyamf-0.6.2.zip</a></li>
+   <li><a href="script.module.pysocks-1.6.8.zip">script.module.pysocks-1.6.8.zip</a></li>
    <li><a href="script.module.resolveurl-5.0.43.zip">script.module.resolveurl-5.0.43.zip</a></li>
    <li><a href="script.module.simplejson-3.4.2.zip">script.module.simplejson-3.4.2.zip</a></li>
    <li><a href="script.module.urlresolver-6.0.0.zip">script.module.urlresolver-6.0.0.zip</a></li>
